integration_tests/codegen_fail/fail/object/derive_fields_duplicate.stderr
error: GraphQL object must have a different name for each field

  = note: https://spec.graphql.org/June2018/#sec-Objects

 --> fail/object/derive_fields_duplicate.rs:4:1
  |
4 | struct ObjA {
  | ^^^^^^
